fix div alignment

--- a/bbc.css
+++ b/bbc.css
@@ -6,7 +6,7 @@
 }
 
 .fixedwidth {
-  width: 1050px;
+  width:1050px;
   margin: 0 auto;
 }
 
@@ -58,7 +58,34 @@
   font-size: 0.9em;
   background-image:url("images/magnifying_glass.png");
   background-repeat: no-repeat;
-  background-position: right center; 
+  background-position: right center;
+}
+
+#newsbar {
+  background-color:#990000;
+  width: 100%;
+  height: 80px;
+  color: white;
+  padding: 0;
+}
+.break{
+  clear: both;
+}
+
+#newsbar p {
+  margin: 0;
+  padding:0;
+  padding-top: 10px;
+  padding-left: 10px;
+}
+
+#newsheader {
+  font-size: 3em;
+}
+
+#uk {
+  font-size:0.7em;
+  padding-left: 20px;
 }
 
 body{
